src/web/Text/styles.css
.text {
  line-height: 1.4;
  margin: 16px 0;
}

.text strong {
  font-weight: 500;
  color: #FFF;
}

.text code {
  font-family: 'Menlo', monospace;
  color: #FFF;
  background: #483a65;
  font-size: 0.9em;
  padding: 0.05em 0.2em;
  border-radius: 2px;
}

.text a {
  color: #FFF;
}

.text a:hover {
  color: inherit;
}

.text--isInline {
  margin: 0;
}

.text--large {
  font-size: 22px;
}

.text--medium {
  font-size: 16px;
}

.text--small {
  font-size: 14px;
}

.text--inheritColor {
  color: inherit;
}

.text--color-default {
  color: #C6BEC7;
}

.text--color-white {
  color: #FFF;
}

